--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
+bartender (0.1.1) unstable; urgency=medium
+
+  * Updates to ease installation and get packages working as expected.
+
+ -- Desone Burns II <dburnsii@live.com>  Tue, 08 Mar 2022 16:30:00 -0700
+
 bartender (0.1.0) unstable; urgency=medium
 
-  * Initial release. 
+  * Initial release.
 
  -- Desone Burns II <dburnsii@live.com>  Wed, 12 Jan 2022 03:00:00 +0000
