--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bartender (0.1.3) unstable; urgency=medium
+
+  * Added lock screen
+
+-- Desone Burns II <dburnsii@live.com>  Wed, 13 Apr 2022 15:30:00 -0700
+
 bartender (0.1.2) unstable; urgency=medium
 
   * Added Admin Server to allow for system updates through the UI
