--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+bartender (0.1.4) unstable; urgency=medium
+
+  * Integrated LEDs into RPi Software
+
+-- Desone Burns II <dburnsii@live.com>  Sun, 19 Jun 2022 11:00:00 -0700
+
 bartender (0.1.3) unstable; urgency=medium
 
   * Added lock screen
